# rag

./: .env.example  .gitignore  README.md  pyproject.toml  rag_evaluation_results.csv  rag_evaluation_results_comparative.csv  rag_evaluation_results_rewriting.csv
api/: api.py
core/: recommender.py
core/models/: recommendation.py
database/: ChromaManager.py  SupabaseManager.py  supabase_tester.py
dataset/: videos.csv
db_population/: database_tester.py  populate_chroma.py  populate_supabase.py  populate_test_chroma.py
db_population/utils/: ChunkingUtils.py
frontend/: package-lock.json  package.json
frontend/api/: endpoints.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: context-form.tsx  video-detail.tsx  video-search.tsx
frontend/hooks/: useRecommend.ts
frontend/lib/: video-utils.ts
frontend/store/: useStore.ts
frontend/types/: Recommendation.ts  RecommendationList.ts
llm/: llm.py  prompt.py
test/: evaluate_rag.py
test_dataset/: test_dataset.csv
test_dataset/transcripts/: 10_practical_apis.txt  11_java_beginner_course.txt  12_java_oop.txt  13_java_collections.txt  14_java_multithreading.txt  15_java_spring_boot.txt  16_java_unit_testing.txt  17_java_data_structures.txt  18_java_lambda_streams.txt  19_java_garbage_collection.txt  1_beginner_intro.txt  20_java_design_patterns.txt  2_intermediate_classes_datastructures.txt  3_advanced_metaclasses.txt  4_practical_scraper.txt  5_advanced_asyncio.txt  6_data_science_pandas.txt  7_web_dev_django.txt  (+2 more)
utils/: clean_dataset.py  merge_csv.py  playlists.csv  utils.py
(+552 files in other folders)
