[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.1.1",
    "fastapi>=0.119.0",
    "openai>=1.0.0",
    "pandas>=2.3.3",
    "pydantic>=2.0.0",
    "python-dotenv>=1.1.1",
    "supabase>=2.22.0",
    "tiktoken>=0.5.0",
    "uvicorn>=0.30.0",
]
